--- a/src/Components/Style/Characters.css
+++ b/src/Components/Style/Characters.css
@@ -1,7 +1,37 @@
-h1 {
+.Tittle {
     margin: 0 auto;
     text-align: center;
+    color: white;
+    width: 100%;
+    color: #fff;
+    font-size: 92px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-family: "Josefin Sans", sans-serif;
+    background: linear-gradient(to right,#095fab 10%, #25abe8 50%, #57d75b 60%);
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 1.5s linear infinite;
+    display: inline-block;
 }
+
+@keyframes textclip {
+to {
+    background-position: 200% center;
+}
+}
+
+
+
+
+
+
+
 
 .container {
     display: flex;
